-runtime: Replace getId() with threadId()